Paint > Set Vertex color sets the Alpha component of RGBA attribute to '1' #110014

Closed
opened 2023-07-12 15:31:29 +02:00 by Patrik Kučavík · 5 comments

System Information
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 531.79

Blender Version
Broken: version: 3.5.0, branch: blender-v3.5-release, commit date: 2023-03-29 02:56, hash: 1be25cfff18b
Worked: -

Short description of error
Paint > Set Vertex color sets the Alpha component of RGBA attribute to '1' even when there is other value in the mesh data already present.
There is no way to set the Alpha value of current paint color.
Brush Settings : Affect Alpha does not affect this behavior.

There is no way to Set Vertex Colors on a mesh without destroying preexisting Alpha values.

Exact steps for others to reproduce the error
Enter vertex paint mode with the default cube.
Use the 'Erase Alpha' blend mode to set the A value to 0.
Use 'Set Vertex Color' with any color selected, the A component gets rewritten as well.

You need either a material setup that displays the Alpha channel, or a custom script that prints the alpha value in the console, or a third party tool that displays Alpha directly to preview the described behavior visually.

**System Information** Operating system: Windows-10-10.0.19045-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 531.79 **Blender Version** Broken: version: 3.5.0, branch: blender-v3.5-release, commit date: 2023-03-29 02:56, hash: `1be25cfff18b` Worked: - **Short description of error** Paint > Set Vertex color sets the Alpha component of RGBA attribute to '1' even when there is other value in the mesh data already present. There is no way to set the Alpha value of current paint color. Brush Settings : Affect Alpha does not affect this behavior. There is no way to Set Vertex Colors on a mesh without destroying preexisting Alpha values. **Exact steps for others to reproduce the error** Enter vertex paint mode with the default cube. Use the 'Erase Alpha' blend mode to set the A value to 0. Use 'Set Vertex Color' with any color selected, the A component gets rewritten as well. You need either a material setup that displays the Alpha channel, or a custom script that prints the alpha value in the console, or a third party tool that displays Alpha directly to preview the described behavior visually.
Patrik Kučavík added the
Status
Needs Triage
Type
Report
Priority
Normal
labels 2023-07-12 15:31:29 +02:00
Member

Will put on my desk

Will put on my desk
Philipp Oeser self-assigned this 2023-07-12 15:33:19 +02:00

@lichtwerk I'm tagging you as discussed in this issue

@lichtwerk I'm tagging you as discussed in this [issue](https://projects.blender.org/blender/blender/issues/110008)
Member

Just quoting the use-case from #110008

sidenote:
It is a common practice in gamedev to rely on coding various data into the alpha channel of the mesh and this behavior produces a lot of accidental rewriting of the data without any visual or other feedback. The solution would be either to have a way to set A value in a brush explicitly (<- feature) or remove the writing to the A component with brush in Mix (and other color related) mode. (<- bugfix)

Just quoting the use-case from #110008 >sidenote: It is a common practice in gamedev to rely on coding various data into the alpha channel of the mesh and this behavior produces a lot of accidental rewriting of the data without any visual or other feedback. The solution would be either to have a way to set A value in a brush explicitly (<- feature) or remove the writing to the A component with brush in Mix (and other color related) mode. (<- bugfix)
Member

Put up a PR here !111002

Put up a PR here !111002
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-08-11 10:39:23 +02:00
Member

It is now an option to lock alpha, see 3c26f84225

It is now an option to lock alpha, see 3c26f84225e79393f12c1f417bd6bc928bff132b
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#110014
No description provided.